// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`my MyError component should render MyError Component  1`] = `
<div
  className="MyError"
>
  Sorry,  you got an error: 
  some error
</div>
`;

exports[`my MyError component should render MyError Component with props(snapshot) 1`] = `
<div
  className="MyError"
>
  Sorry,  you got an error: 
  Server error
</div>
`;

exports[`my MyError component should render MyError Component without props(snapshot) 1`] = `
<div
  className="MyError"
>
  Sorry,  you got an error: 
  some error
</div>
`;
